--- a/index.html
+++ b/index.html
@@ -681,11 +681,11 @@
 
 
         <!-- Testimonial Start -->
-        <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container-xxl py-5 wow fadeInUp owl-rtl" data-wow-delay="0.1s">
             <div class="container">
                 <div class="text-center">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">شهادة</h5>
-                    <h1 class="mb-5">عملاؤنا يقولون !!!</h1>
+                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
+                    <h1 class="mb-5">Our Clients Say!!!</h1>
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item bg-transparent border rounded p-4">
@@ -694,19 +694,19 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">اسم العميل</h5>
-                                <small>مهنة</small>
+                                <h5 class="mb-1">Client Name</h5>
+                                <small>Profession</small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        
+                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">اسم العميل</h5>
-                                <small>مهنة</small>
+                                <h5 class="mb-1">Client Name</h5>
+                                <small>Profession</small>
                             </div>
                         </div>
                     </div>
@@ -716,8 +716,8 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">اسم العميل</h5>
-                                <small>مهنة</small>
+                                <h5 class="mb-1">Client Name</h5>
+                                <small>Profession</small>
                             </div>
                         </div>
                     </div>
@@ -727,8 +727,8 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">اسم العميل</h5>
-                                <small>مهنة</small>
+                                <h5 class="mb-1">Client Name</h5>
+                                <small>Profession</small>
                             </div>
                         </div>
                     </div>
@@ -739,7 +739,7 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn text-end" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
